uploaded changes to project

--- a/index.html
+++ b/index.html
@@ -65,33 +65,29 @@
   <!-- FILTERS -->
   <div class="filters container-fluid">
     <div class="row">
-      <div class="col-12 col-lg-4 single-filter text-center bg-dark px-0">
-        <label for="marketingBtn" class="px-4 py-2 d-flex justify-content-between align-items-center">
-          <span class="title">Проекти од Студенти од Академијата за <br/>
+        <label for="marketingBtn" class="col-12 col-lg-4 single-filter text-center bg-dark px-4 py-2 d-flex justify-content-between align-items-center m-0">
+          <span class="title text-left">Проекти од Студенти од Академијата за <br/>
             Маркетинг</span>
           <input type="checkbox" id="marketingBtn" class="d-none"/>
           <span id="marketingCheckIcon" class="d-none">
             <i class="fa-solid fa-check fa-2x"></i></span>
         </label>
-      </div>
-      <div class="col-12 col-lg-4 single-filter text-center bg-dark px-0 border-left border-right">
-        <label for="developingBtn" class="px-4 py-2 d-flex justify-content-between align-items-center">
-          <span class="title">Проекти од Студенти од Академијата за <br/>
+
+        <label for="developingBtn" class="col-12 col-lg-4 single-filter text-center bg-dark px-0 border-left border-right px-4 py-2 d-flex justify-content-between align-items-center m-0">
+          <span class="title text-left">Проекти од Студенти од Академијата за <br/>
             Програмирање</span>
           <input type="checkbox" id="developingBtn" class="d-none"/>
           <span id="developingCheckIcon" class="d-none">
             <i class="fa-solid fa-check fa-2x"></i></span>
         </label>
-      </div>
-      <div class="col-12 col-lg-4 single-filter text-center bg-dark px-0">
-        <label for="designBtn" class="px-4 py-2 d-flex justify-content-between align-items-center">
-          <span class="title">Проекти од Студенти од Академијата за <br/>
+
+        <label for="designBtn" class="col-12 col-lg-4 single-filter text-center bg-dark px-0 px-4 py-2 d-flex justify-content-between align-items-center m-0">
+          <span class="title text-left">Проекти од Студенти од Академијата за <br/>
             Дизајн</span>
           <input type="checkbox" id="designBtn" class="d-none"/>
           <span id="designCheckIcon" class="d-none">
             <i class="fa-solid fa-check fa-2x"></i></span>
         </label>
-      </div>
     </div>
   </div>
   <!-- CARDS -->
