--- a/form.html
+++ b/form.html
@@ -20,7 +20,7 @@
 <body class="light-background body-form">
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-light light-background py-0">
-    <div class="container p-3 py-lg-0">
+    <div class="container py-3 py-lg-0">
       <a class="navbar-brand logo d-flex flex-column align-items-center font-weight-bold text-dark ml-3 ml-lg-0"
         href="./index.html">
         <img src="./assets/Logo.png" alt="Firm Logo"/>
