--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid w-75 text-center pb-5 cards-container">
+  <div class="container-fluid w-75 text-center pb-xl-5 cards-container">
     <div class="row">
       <div class="col-12 col-sm-6 col-lg-4 mb-4 single-item marketing" >
         <div class="card single-card px-0 overflow-hidden">
@@ -402,6 +402,14 @@
       </div>
     </div>
   </div>
+
+  <div class="container mb-4 d-none load-more-section">
+    <div class="row text-center">
+      <div class="col-12">
+        <button type="button" class="btn btn-danger primary-btn-color" id="loadMore">Прикажи Повеќе</button>
+      </div>
+    </div>
+  </div>
   <!-- footer -->
   <footer class="dark-background container-fluid form-footer">
     <div class="row">
@@ -423,6 +431,7 @@
   <script src="./scripts/h1-animation.js"></script>
   <script src="./scripts/filters.js"></script>
   <script src="./scripts/filter-bar-scroll.js"></script>
+  <script src="./scripts/pagination.js"></script>
 </body>
 
 </html>
