fixed pagination/fixed margin bottom on last card

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-sm-6 col-lg-4 mb-0 mb-xl-0 single-item coding">
+      <div class="col-12 col-sm-6 col-lg-4 mb-4 mb-xl-0 single-item coding">
         <div class="card single-card px-0 overflow-hidden">
           <img src="./assets/card-code.jpg" class="card-img-top" alt="...">
           <div class="card-body text-left">
@@ -402,8 +402,8 @@
       </div>
     </div>
   </div>
-
-  <div class="container mb-4 d-none load-more-section">
+<!-- load more btn -->
+  <div class="container mb-4 d-lg-none load-more-section">
     <div class="row text-center">
       <div class="col-12">
         <button type="button" class="btn btn-danger primary-btn-color" id="loadMore">Прикажи Повеќе</button>
