fixed nav-bar mobile

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               Дизајн</a>
           </li>
         </ul>
-        <a href="./form.html" class="btn btn-danger primary-btn-color primary-btn mt-3 mt-lg-0">Вработи Наш Студент</a>
+        <a href="./form.html" class="btn btn-danger primary-btn-color primary-btn mt-3 mt-lg-0" id="visitFormBtn">Вработи Наш Студент</a>
       </div>
     </div>
   </nav>
