--- a/form.html
+++ b/form.html
@@ -85,15 +85,15 @@
                   </div>
                   <div class="form-group col-md-6">
                     <label for="phoneNumber" class="mb-1 font-weight-bold font-size-small">Контакт Телефон</label>
-                    <input name="tel" type="tel" class="form-control" id="phoneNumber" placeholder="Контакт телефон пр. 02-218-6666" required>
+                    <input name="tel" type="number" min="9" class="form-control" id="phoneNumber" placeholder="Контакт телефон пр. 02-218-6666" required>
                   </div>
                 </div>
 
                 <div class="form-row align-items-end" id="buttonRow">
                   <div class="form-group col-md-6">
                     <label for="select" class="mb-1 font-weight-bold font-size-small">Тип на Студент</label>
-                    <select name="typeofstudent" class="form-select form-control font-weight-bold dropdown" aria-label="Select Type of Student" id="select" required>
-                      <option value="" selected="" disabled="disabled" hidden>
+                    <select name="typeofstudent" class="form-select form-control font-weight-bold dropdown pb-1" aria-label="Select Type of Student" id="select" required>
+                      <option value="" selected="" disabled="disabled" hidden class="">
                           Изберете тип на студент
                       </option>
                       <option class="form-control font-weight-bold border-bottom py-5" value="marketing">Студенти од Маркетинг</option>
