--- a/form.html
+++ b/form.html
@@ -66,7 +66,7 @@
 <div class="container">
   <div class="row align-items-center pb-5">
       <div class="col-12 col-lg-8 offset-lg-2 py-5">
-          <form id="form">
+          <form id="form" onsubmit="return false">
               <div class="form-row ">
                   <div class="form-group col-md-6">
                     <label for="fullName" class="mb-1 font-weight-bold font-size-small">Име и Презиме</label>
